objects/Activity/fields/Activity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Activity_Reason__c</fullName>
    <label>Activity Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account is with Legal</fullName>
            </value>
            <value>
                <fullName>Bank and Trade References Submitted</fullName>
            </value>
            <value>
                <fullName>Collection - Follow up with Customer</fullName>
            </value>
            <value>
                <fullName>Collection - Internal Support request</fullName>
            </value>
            <value>
                <fullName>Collection - Receipt Confirmation</fullName>
            </value>
            <value>
                <fullName>Credit Application Approved</fullName>
            </value>
            <value>
                <fullName>Credit Application Denied/Incomplete</fullName>
            </value>
            <value>
                <fullName>Credit Check for Service</fullName>
            </value>
            <value>
                <fullName>Customer Statement Sent</fullName>
            </value>
            <value>
                <fullName>D&amp;B Report Initiated</fullName>
            </value>
            <value>
                <fullName>Demand Letter for Payment Sent</fullName>
            </value>
            <value>
                <fullName>General Error</fullName>
            </value>
            <value>
                <fullName>Incorrect Price</fullName>
            </value>
            <value>
                <fullName>Issue- Billing</fullName>
            </value>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>New Customer Account Created</fullName>
            </value>
            <value>
                <fullName>Payment Commitment</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
            <value>
                <fullName>Processed Credit Card Payment</fullName>
            </value>
            <value>
                <fullName>Vendor Form Submitted</fullName>
            </value>
            <value>
                <fullName>Issue- Collection</fullName>
                <isActive>false</isActive>
                <label>Issue- Collection</label>
            </value>
            <value>
                <fullName>Missing BOL</fullName>
                <isActive>false</isActive>
                <label>Missing BOL</label>
            </value>
            <value>
                <fullName>Missing Manifest</fullName>
                <isActive>false</isActive>
                <label>Missing Manifest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>