objects/Activity/fields/Confirm_Task__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Task__c</fullName>
    <label>Confirm Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>