objects/Activity/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Bi-annually</fullName>
            </value>
            <value>
                <fullName>10 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Biennially</fullName>
            </value>
            <value>
                <fullName>Bimonthly</fullName>
            </value>
            <value>
                <fullName>Frequency</fullName>
                <isActive>false</isActive>
                <label>Frequency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>