objects/Activity/fields/HasAttachement__c.field-meta.xml
<CustomField>
    <fullName>HasAttachement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasAttachment</label>
    <type>Checkbox</type>
</CustomField>