objects/Activity/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasAttachment</label>
    <type>Checkbox</type>
</CustomField>