objects/Activity/fields/Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
                <color>#A53711</color>
                <default>true</default>
                <label>E-Mail</label>
            </value>
            <value>
                <fullName>Phone Call</fullName>
                <color>#78C953</color>
                <label>Phone Call</label>
            </value>
            <value>
                <fullName>Face to Face</fullName>
                <color>#F96FB7</color>
                <label>Face to Face</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>