objects/Activity/fields/Internal_Call__c.field-meta.xml
<CustomField>
    <fullName>Internal_Call__c</fullName>
    <formula>LEN(  Phone__c ) = 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Call</label>
    <type>Checkbox</type>
</CustomField>