objects/Activity/fields/Owner_BDD__c.field-meta.xml
<CustomField>
    <fullName>Owner_BDD__c</fullName>
    <formula>Text(Owner:User.BDD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner BDD</label>
    <type>Text</type>
</CustomField>