objects/Activity/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <label>Parameter</label>
    <type>TextArea</type>
</CustomField>