objects/Activity/fields/Powerof1__c.field-meta.xml
<CustomField>
    <fullName>Powerof1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Powerof1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>