objects/Activity/fields/ProfileID__c.field-meta.xml
<CustomField>
    <fullName>ProfileID__c</fullName>
    <formula>$User.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProfileID</label>
    <type>Text</type>
</CustomField>