objects/Activity/fields/Purpose_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Call__c</fullName>
    <label>Purpose of Call</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>General Check In</fullName>
            </value>
            <value>
                <fullName>Issue - Billing</fullName>
            </value>
            <value>
                <fullName>Issue - Collections</fullName>
            </value>
            <value>
                <fullName>Issue - Service</fullName>
            </value>
            <value>
                <fullName>Work on opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>