objects/Activity/fields/RelatedtoID__c.field-meta.xml
<CustomField>
    <fullName>RelatedtoID__c</fullName>
    <formula>WhatId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RelatedtoID</label>
    <type>Text</type>
</CustomField>