objects/Activity/fields/SC_Upload_Value__c.field-meta.xml
<CustomField>
    <fullName>SC_Upload_Value__c</fullName>
    <label>SC Upload Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>