objects/Activity/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <label>Service Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albany NY, SC27</fullName>
            </value>
            <value>
                <fullName>Aston PA, SC33</fullName>
            </value>
            <value>
                <fullName>Baltimore MD, SC04</fullName>
            </value>
            <value>
                <fullName>Bridgeport CT, SC21</fullName>
            </value>
            <value>
                <fullName>Brooklyn NY, SC32</fullName>
            </value>
            <value>
                <fullName>Chicago IL, SC22</fullName>
            </value>
            <value>
                <fullName>Clayton, NJ SC02</fullName>
            </value>
            <value>
                <fullName>Corp, SC15</fullName>
            </value>
            <value>
                <fullName>Elizabeth, NJ SC01</fullName>
            </value>
            <value>
                <fullName>Elizabeth - TSDF</fullName>
            </value>
            <value>
                <fullName>ER Events, SC99</fullName>
            </value>
            <value>
                <fullName>Harrisburg, PA SC25</fullName>
            </value>
            <value>
                <fullName>Hartford CT, SC19</fullName>
            </value>
            <value>
                <fullName>Hydro, IN SC40</fullName>
            </value>
            <value>
                <fullName>Hydro, PA SC41</fullName>
            </value>
            <value>
                <fullName>Bayonne, NJ SC03</fullName>
            </value>
            <value>
                <fullName>Labpack-Metro, SC73</fullName>
            </value>
            <value>
                <fullName>Labpack-New England, SC77</fullName>
            </value>
            <value>
                <fullName>Lewisberry - TSDF</fullName>
            </value>
            <value>
                <fullName>Long Island, NY SC62</fullName>
            </value>
            <value>
                <fullName>Maint, SC52</fullName>
            </value>
            <value>
                <fullName>Metro LP, NJ SC73</fullName>
            </value>
            <value>
                <fullName>Mid Atlantic LP, SC74</fullName>
            </value>
            <value>
                <fullName>Nashua NH, SC20</fullName>
            </value>
            <value>
                <fullName>New England LP, SC77</fullName>
            </value>
            <value>
                <fullName>New Windsor, NY SC17</fullName>
            </value>
            <value>
                <fullName>Norfolk MA, SC07</fullName>
            </value>
            <value>
                <fullName>Pulaski PA, SC24</fullName>
            </value>
            <value>
                <fullName>Rahway NJ, SC31</fullName>
            </value>
            <value>
                <fullName>S. NJ LP, SC72</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>