objects/Activity/fields/Submit_To__c.field-meta.xml
<CustomField>
    <fullName>Submit_To__c</fullName>
    <label>Submit To</label>
    <type>TextArea</type>
</CustomField>