objects/Activity/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>